# Simple-VS

./: .gitignore  README.md  noxfile.py  pyproject.toml
src/simple_vs/: __main__.py  cli.py  example.py  io.py  pipeline.py  util.py
